--- a/src/sass/components/_table.scss
+++ b/src/sass/components/_table.scss
@@ -9,7 +9,7 @@
       width: 100%;
       height: 100vh;
       padding: 15px;
-      z-index: 3;
+      z-index: 1002;
     }
     &__title {
       display: flex;
