--- a/src/sass/components/_virtualKeyboard.scss
+++ b/src/sass/components/_virtualKeyboard.scss
@@ -2,7 +2,7 @@
   position: fixed;
   left: 0;
   bottom: -100%;
-  z-index: 3;
+  z-index: 1003;
   width: 100%;
   padding: 5px 0;
   background: #30333b;
